--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <br>
 <br>
 <br>
+<br>		
 <br>
 <br>
 <br>
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<h1 align="center" > i have osteoperosis </h1>
+<h1 align="center" > UniTeD </h1>
 <p> i like cheese and crackers </p>
 </body>
 <body background="http://mackeydl.github.io/pics/city.jpg">
