--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-<title> Heelo Guys Its JABOI </title>
+<title> UniTeD </title>
+<link rel="icon" href="cyka_blyat.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="cyka_blyat.ico" type="image/x-icon"/>
 <body>
 <br>
 <br>
@@ -19,6 +21,7 @@
 <br>
 <h1 align="center" > UniTeD </h1>
 <p> i like cheese and crackers </p>
+<a href="http://github.com/mackeydl" class="button">Github</a>
 </body>
 <body background="http://mackeydl.github.io/pics/city.jpg">
 </body>
