--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 <br>
 <h1 align="center" > UniTeD </h1>
 <p> i like cheese and crackers </p>
-<a href="http://github.com/mackeydl" class="button">Github</a>
 </body>
-<body background="http://mackeydl.github.io/pics/city.jpg">
+<body background="http://i.imgur.com/Xu3y2IV.png">
 </body>
 </html>
