--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 <h1 align="center" > UniTeD </h1>
 <p> i like cheese and crackers </p>
 </body>
-<body background="http://i.imgur.com/Xu3y2IV.png">
+<body background="http://i.imgur.com/Dik8l2g.png">
 </body>
 </html>
