--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<font face="Comic sans MS" size="5">Comic Sans MS</font><br />
 <title> UniTeD </title>
 <link rel="icon" href="cyka_blyat.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="cyka_blyat.ico" type="image/x-icon"/>
