--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-<font face="Comic sans MS" size="5">Comic Sans MS</font><br />
 <title> UniTeD </title>
 <link rel="icon" href="cyka_blyat.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="cyka_blyat.ico" type="image/x-icon"/>
@@ -20,7 +19,7 @@
 <br>
 <br>
 <br>
-<h1 align="center" > UniTeD </h1>
+<font face="Comic sans MS" size="5">UniTeD</font><br />
 <p> i like cheese and crackers </p>
 </body>
 <body background="http://i.imgur.com/Dik8l2g.png">
