--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 <link rel="shortcut icon" href="cyka_blyat.ico" type="image/x-icon"/>
 <body>
 <br>
+  <style>
+body {
+    background-color: transparent;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
+</style>
 <br>
 <br>
 <br>
