--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ a:active {
   <font face="Comic sans MS" size="5"><h1 align="center">UniTeD</h1></font>
 <a href="http://steamcommunity.com/id/unit_ed"<button><p> Steam </p></Button>
 <a href="https://www.youtube.com"<button><p> Youtube </p></button>
-<body background src="http://7-themes.com/data_images/out/60/6975466-end-of-the-world.jpg"></body>
+<body background="http://7-themes.com/data_images/out/60/6975466-end-of-the-world.jpg"></body>
 
-<h2>No one likes erick</h2>
 
 </html>
