--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<title> UniTeD </title>
+<title> Skagonmaka </title>
 <link rel="icon" href="cyka_blyat.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="cyka_blyat.ico" type="image/x-icon"/>
 <body>
@@ -36,9 +36,9 @@ p {
 <br>
 <br>
 <style>
-/* unvisited link */
+<button>/* unvisited link */
 a:http://youtube.com/ {
-    color: White;
+    color: White;</button>
 }
 
 /* visited link */
