--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ p {
 <br>
 <br>
 <style>
-<button>/* unvisited link */
+/* unvisited link */
 a:http://youtube.com/ {
-    color: White;</button>
+    color: White;
 }
 
 /* visited link */
@@ -56,7 +56,7 @@ a:active {
     color: Red;
 }
 </style>
-  <font face="Comic sans MS" size="5"><h1 align="center">UniTeD</h1></font>
+  <font face="Comic sans MS" size="5"><h1 align="center">Skagonmaka</h1></font>
 <a href="http://steamcommunity.com/id/unit_ed"<button><p> Steam </p></Button>
 <a href="https://www.youtube.com"<button><p> Youtube </p></button>
 
