--- a/css.html
+++ b/css.html
@@ -8,7 +8,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('http://w3schools.com/w3images/forestbridge.jpg');
+    background-image: url('http://www.noanxiety.com/relaxing-links/relaxing-ocean.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
