--- a/css.html
+++ b/css.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>CappingTV</title>
+<title>Skins.me</title>
 <link rel="icon"
       type="image/png"
       href="cptv_transwhite.png">
