--- a/css.html
+++ b/css.html
@@ -52,11 +52,11 @@ li a:hover:not(.active) {
 		<title>Mackey</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="http://mackeydl.github.io/css/main.css" />
 		<link rel="shortcut icon" href="websiteimage.ico" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<div id="background">
-	<img src="pics/waterbg.jpg" autoplay muted loop class="stretch" alt="" />
+	<img src="http://mackeydl.github.io/pics/waterbg.jpg" autoplay muted loop class="stretch" alt="" />
 	</div>
 </head>
 	<body>
@@ -155,9 +155,9 @@ request.open( 'GET', src="media/text.txt", true );
 request.send()
 </script>
 	 <!-- jQuery -->
-	 <script src="js/jquery.js"></script>
+	 <script src="http://mackeydl.github.io/js/jquery.js"></script>
 	 <!-- Bootstrap Core JavaScript -->
-	 <script src="js/bootcamp.min.js"></script>
-	 <script src="js/navshrink.js"></script>
+	 <script src="http://mackeydl.github.io/js/bootcamp.min.js"></script>
+	 <script src="http://mackeydl.github.io/js/navshrink.js"></script>
 	</body>
 </html>
